# gws-workspace-agent

./: .gitignore  CHANGELOG.md  HERE.md  LICENSE  MILESTONE1.md  MILESTONE2.md  PLAN.md  PR.md  README.md  pyproject.toml  setup.py  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: auth_setup.md
src/google_workspace_mcp/: __init__.py  auth.py  cli.py  config.py  server.py  templates.py
src/google_workspace_mcp/middleware/: __init__.py  audit.py  pii_scrubber.py  rate_limiter.py
src/google_workspace_mcp/tools/: __init__.py  read.py  write.py
templates/: colors.default.json  gws_agent_rules.md
tests/: test_cli.py  test_middleware.py  test_tools.py
